--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,7 @@
 .Footer {
     width: 100vw;
-    min-height: 40px;
     background-color: var(--color-blue-darkest);
     color: var(--color-white);
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
