--- a/src/components/Header/components/Burger/Burger.module.scss
+++ b/src/components/Header/components/Burger/Burger.module.scss
@@ -1,4 +1,6 @@
 .burger {
+    // background-color: rgba(1, 1, 1, 0);
+    // border: none;
     position: relative;
     z-index: 2;
     display: flex;
