--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,4 +1,6 @@
 .container {
-    max-width: 1260px;
-    margin: auto;
+    margin: 0 auto;
+    padding-left: var(--container-offset);
+    padding-right: var(--container-offset);
+    max-width: var(--container-width);
 }
