finished stylization of dropdown burger menu, added logo component and added router links to burger menu list

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     z-index: 5;
-    background-color: var(--color-blue-dark);
+    background-color: var(--color-blue-darkest);
     color: var(--color-white);
 }
 
