--- a/src/components/Header/components/Dropdown/index.module.scss
+++ b/src/components/Header/components/Dropdown/index.module.scss
@@ -4,10 +4,10 @@
     left: -25px;
     opacity: 0;
     visibility: hidden;
-    width: 150px;
+    width: 200px;
     padding: 85px 25px 25px 30px;
     border-radius: 0 0 10px 10px;
-    background-color: var(--color-blue-darkest);
+    background-color: var(--color-blue-dark);
     transition: opacity 0.3s, visibility 0.3s;
 
     &Open {
@@ -17,5 +17,52 @@
 
     @media (max-width: 768px) {
         display: none;
+    }
+}
+
+.item {
+    list-style: none;
+    &:not(:last-child) {
+        margin-bottom: 22px;
+    }
+}
+
+.link {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    font-size: 15px;
+    line-height: 15px;
+    font-weight: 400;
+    color: var(--color-white);
+    opacity: 0.8;
+    transition: opacity 0.3s;
+    text-decoration: none;
+    outline: none;
+
+    &Active {
+        opacity: 1;
+        font-size: 16px;
+        line-height: 16px;
+        font-weight: 500;
+
+        &:before {
+            display: block;
+        }
+    }
+
+    &:hover {
+        opacity: 1;
+    }
+
+    &:focus-visible {
+        opacity: 1;
+    }
+
+    svg {
+        position: relative;
+        width: 16px;
+        height: 20px;
+        margin-right: 15px;
     }
 }
