--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,3 +5,63 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 0;
+
+    @media (max-width: 576px) {
+        flex-direction: column;
+    }
+}
+
+.list {
+    display: flex;
+    margin: 0px;
+    padding: 0px;
+}
+
+.item {
+    list-style: none;
+    &:not(:last-child) {
+        margin-right: 20px;
+    }
+}
+
+.link {
+    text-decoration: none;
+    position: relative;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 16px;
+    color: var(--color-white);
+
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: -8px;
+        left: 0;
+        width: 100%;
+        height: 2.5px;
+        border-radius: 5px;
+        background-color: var(--color-blue);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0.3s;
+    }
+
+    &:hover {
+        &:before {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+.author {
+    font-size: 16px;
+    line-height: 14px;
+    color: rgba(#fff, 0.5);
+}
