--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -42,3 +42,33 @@
         padding: 0;
     }
 }
+
+.link {
+    text-decoration: none;
+    position: relative;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 16px;
+    color: var(--color-white);
+
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: -8px;
+        left: 0;
+        width: 100%;
+        height: 2.5px;
+        border-radius: 5px;
+        background-color: var(--color-blue);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0.3s;
+    }
+
+    &:hover {
+        &:before {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
