--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,5 +1,48 @@
 .form {
     position: relative;
+
+    @media (max-width: 768px) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        pointer-events: none;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        transition: opacity 0.3s;
+
+        &.visible {
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
+}
+
+.search {
+    width: 400px;
+
+    @media (max-width: 1280px) {
+        width: 370px;
+    }
+
+    @media (max-width: 768px) {
+        width: 100%;
+        height: inherit;
+    }
+
+    input {
+        height: 40px;
+        padding-right: 40px;
+
+        @media (max-width: 768px) {
+            height: inherit;
+            border-radius: 0;
+            padding-left: 40px;
+            font-size: 16px;
+            line-height: 16px;
+        }
+    }
 }
 
 .closeButton {
@@ -24,7 +67,12 @@
     svg {
         width: 17px;
         height: 17px;
-        stroke: currentColor;
+    }
+
+    @media (max-width: 769px) {
+        svg {
+            color: var(--color-white);
+        }
     }
 }
 
@@ -69,6 +117,29 @@
     svg {
         width: 16px;
         height: 16px;
+        stroke: var(--color-white);
+    }
+}
+
+.hideSearch {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    margin-left: -9px;
+
+    @media (min-width: 769px) {
+        display: none;
+    }
+
+    svg {
+        width: 22px;
+        height: 22px;
         stroke: var(--color-white);
     }
 }
