started to do login page

--- a/src/components/InputText/InputText.module.scss
+++ b/src/components/InputText/InputText.module.scss
@@ -34,7 +34,7 @@
 
 .light {
     padding: 0 15px;
-    background-color: var(--color-blue-light);
+    background-color: var(--color-white);
     font-weight: 300;
     color: var(--color-dark);
     border-color: transparent;
