--- a/src/components/Pages/Login/Login.module.scss
+++ b/src/components/Pages/Login/Login.module.scss
@@ -1,5 +1,5 @@
 .Login {
     margin: 0px;
-    background-color: var(--color-blue-light);
+    // background-color: var(--color-blue-light);
     color: var(--color-black);
 }
