--- a/src/components/InputText/InputText.module.scss
+++ b/src/components/InputText/InputText.module.scss
@@ -87,3 +87,23 @@
     display: flex;
     flex-direction: column;
 }
+
+.caption {
+    margin-bottom: 7px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.errorMessage {
+    display: block;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-red);
+    margin-top: 5px;
+}
+
+.error {
+    color: var(--color-dark);
+}
