--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,3 +4,10 @@
     padding-right: var(--container-offset);
     max-width: var(--container-width);
 }
+
+.appContainer {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
