Added register page

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .Footer {
-    width: 100vw;
+    width: 100%;
     background-color: var(--color-blue-darkest);
     color: var(--color-white);
     padding-top: 10px;
