started creating main page ui components. Working with FilmList and Carousel

--- a/src/components/Pages/Homepage/Homepage.module.scss
+++ b/src/components/Pages/Homepage/Homepage.module.scss
@@ -1,5 +1,5 @@
 .Homepage {
     margin: 0px;
-    background-color: var(--color-blue-light);
+    // background-color: var(--color-blue-light);
     color: var(--color-black);
 }
