--- a/src/components/UI/Title/Title.module.scss
+++ b/src/components/UI/Title/Title.module.scss
@@ -1,12 +1,16 @@
 .title {
 	margin: 0;
-	font-size: 30px;
+	// font-size: 30px;
 	line-height: 30px;
 	font-weight: 500;
 	color: var(--color-light-dark);
 
 	@media (max-width: 576px) {
-		font-size: 20px;
+		// font-size: 20px;
 		line-height: 30px;
 	}
+}
+
+.bold{
+	font-weight: bold;
 }
