added promo slider

--- a/src/components/Pages/Homepage/Homepage.module.scss
+++ b/src/components/Pages/Homepage/Homepage.module.scss
@@ -1,5 +1,10 @@
 .Homepage {
     margin: 0px;
-    // background-color: var(--color-blue-light);
+    background-color: var(--color-blue-lightest);
     color: var(--color-black);
+}
+
+.promoSlider{
+    margin-top: 10px;
+    margin-bottom: 100px;
 }
