--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -15,6 +15,7 @@
     --color-primary: #005382;
     --color-dark-primary: #003f63;
     --color-blue-dark: #2e4553;
+    --color-blue-lightest: #f5f8fb;
     --color-blue-light: #c1d9f9;
     --color-blue-darkest: #0a1c34;
     --color-blue: #5a89b9;
