--- a/src/components/UI/PromoSlider/slick.css
+++ b/src/components/UI/PromoSlider/slick.css
@@ -81,7 +81,17 @@
 
     height: 100%;
     min-height: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+
+@media (max-width: 1200px) {
+    .slick-slide{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+}
+
 [dir='rtl'] .slick-slide
 {
     float: right;
