--- a/src/components/UI/PromoCard/PromoCard.module.scss
+++ b/src/components/UI/PromoCard/PromoCard.module.scss
@@ -1,6 +1,8 @@
 .promoCard{
     height: 100%;
-    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+    // margin-bottom: 24px;
     position: relative;
     border-radius: 15px;
 }
