--- a/src/components/Pages/Homepage/components/FilmList/FilmsList.module.scss
+++ b/src/components/Pages/Homepage/components/FilmList/FilmsList.module.scss
@@ -21,23 +21,6 @@
 	}
 }
 
-// .carousel{
-// 	height: 150px;
-// }
-
-.item{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-	height: 150px;
-}
-.item1{
-    background-color: cornflowerblue;
-}
-.item2{
-    background-color: coral;
-}
-.item3{
-    background-color: darkseagreen;
+.content{
+	width: 100%;
 }
