--- a/src/components/Gallery/slick.css
+++ b/src/components/Gallery/slick.css
@@ -57,6 +57,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+
 }
 .slick-track:before,
 .slick-track:after
@@ -81,14 +82,15 @@
 
     height: 100%;
     min-height: 1px;
+
+    padding-right: 12px;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .slick-slide{
-        padding-left: 0px;
-        padding-right: 0px;
+        padding-right: 25px;
     }
-}
+} */
 
 [dir='rtl'] .slick-slide
 {
