--- a/src/components/UI/PromoCard/PromoCard.module.scss
+++ b/src/components/UI/PromoCard/PromoCard.module.scss
@@ -1,7 +1,6 @@
 .promoCard{
+    width: 100%;
     height: 100%;
-    padding-right: 10px;
-    padding-left: 10px;
     // margin-bottom: 24px;
     position: relative;
     border-radius: 15px;
