--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,6 +3,7 @@
     padding-left: var(--container-offset);
     padding-right: var(--container-offset);
     max-width: var(--container-width);
+    overflow: hidden;
 }
 
 .appContainer {
