changed carousel components directories

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -1,9 +1,10 @@
 .gallery{
     position: relative;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .viewport{
-    // display: flex;
     margin-left: -12px;
     margin-right: -12px;
     padding-left: 12px;
@@ -27,6 +28,7 @@
     font-size: 46px;
     top: 45%;
     color:black;
+    text-align: end;
 
 }
 
