handling login and register user, connected axios

--- a/client/src/components/Pages/Login/Login.module.scss
+++ b/client/src/components/Pages/Login/Login.module.scss
@@ -1,20 +1,23 @@
 .Login {
-    margin: 0px;
+    margin: 0 auto;
     // background-color: var(--color-blue-light);
     color: var(--color-black);
 }
 
 .authForm {
     max-width: 390px;
-    margin: 0 auto;
+    min-width: 390px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 100px 15px;
     height: 100%;
 
     @media (max-width: 576px) {
         padding: 70px 15px;
+    }
+
+    @media (max-width: 450px) {
+        min-width: fit-content;
     }
 }
 
@@ -45,4 +48,38 @@
         font-size: 16px;
         line-height: 16px;
     }
+}
+
+.errorWrapper{
+    margin-top: 20px;
+}
+
+.error{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 400;
+    border-radius: 10px;
+    color: var(--color-white);
+    background-color: var(--color-orange);
+}
+
+.errorImage{
+    font-size: 38px;
+}
+
+.errorInfo{
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.errorMessage{
+    color: var(--color-grey);
+    opacity: 0.7;
+    font-size: 14px;
 }
