--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -9,6 +9,7 @@
     --color-white: #fff;
     --color-black: #000;
     --color-red: #f00;
+    --color-orange: #FF542E;
     --color-green: #00a340;
     --color-dark: #141414;
     --color-light-dark: #1f1f1f;
