--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -6,8 +6,8 @@
 }
 
 .appContainer {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
 }
