--- a/client/src/components/UI/FilmCard/FilmCard.module.scss
+++ b/client/src/components/UI/FilmCard/FilmCard.module.scss
@@ -1,6 +1,8 @@
 .card{
     width: 100%;
     height: 100%;
+    text-decoration: none;
+    border: none;
 }
 
 .imageSection{
@@ -65,6 +67,8 @@
     margin-top: 8px;
     margin-bottom: 0;
     padding: 0;
+
+    
     white-space: nowrap; /* Текст не переносится */
     overflow: hidden; /* Обрезаем всё за пределами блока */
     text-overflow: ellipsis; /* Добавляем многоточие */
@@ -72,6 +76,7 @@
 
 .title{
     font-size: 20px; 
+    color: var(--color-black)
 }
 
 .imageSection, .poster, .imgWrapper,.img, .properties{
