--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,3 +1,22 @@
+html {
+	box-sizing: border-box;
+	height: 100%;
+	font-family: var(--font-family, sans-serif);
+	-webkit-text-size-adjust: 100%;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+ul{
+    list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
 .container {
     margin: 0 auto;
     padding-left: var(--container-offset);
