--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -8,9 +8,15 @@
     // colors
     --color-white: #fff;
     --color-black: #000;
+    --color-grey: #cecece;
+    --color-grey-lightest: #f5f5f5;
     --color-red: #f00;
+    --color-red-light: rgb(255, 152, 152);
+    --color-red-lightest: #FFEBEB;
     --color-orange: #FF542E;
     --color-green: #00a340;
+    --color-green-light: #0bff6d;
+    --color-green-lightest: #EBF7EB;
     --color-dark: #141414;
     --color-light-dark: #1f1f1f;
     --color-primary: #005382;
