created comment component, fixed small bugs in review component

--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -8,7 +8,9 @@
     // colors
     --color-white: #fff;
     --color-black: #000;
+    --color-grey-dark: #a0a0a0;
     --color-grey: #cecece;
+    --color-grey-light: #e0e0e0;
     --color-grey-lightest: #f5f5f5;
     --color-red: #f00;
     --color-red-light: rgb(255, 152, 152);
