--- a/client/src/components/Pages/Film/components/Comments/Comments.module.scss
+++ b/client/src/components/Pages/Film/components/Comments/Comments.module.scss
@@ -1,6 +1,7 @@
 .container{
    	position: relative;
 	padding-top: 80px;
+	padding-bottom: 10px;
 
 	@media (max-width: 576px) {
 		padding-top: 50px;
@@ -33,4 +34,16 @@
 	border-radius: 5px;
 
     // background-color: var(--color-grey-lightest);
+}
+
+.loadMore{
+	width: 100%;
+	padding: 10px;
+	background-color: var(--color-grey-light);
+	font-size: 16px;
+
+	transition: 0.1s;
+	&:hover{
+		background-color: var(--color-grey);
+	}
 }
