--- a/client/src/components/Pages/Film/components/Comments/Components/Item/Item.module.scss
+++ b/client/src/components/Pages/Film/components/Comments/Components/Item/Item.module.scss
@@ -1,7 +1,5 @@
 .item {
-    // background-color: var(--color-grey-lightest);
-
-	&:not(:last-child) {
+	&:not(:last-child){
 		margin-bottom: 20px;
 	}
 
@@ -13,13 +11,14 @@
 .top{
     display: flex;
     flex-direction: row;
+	justify-content: space-between;
     margin: 0;
-    padding-bottom: 10px;
-	font-size: 18px;
+	padding: 5px 0px 10px 0px;
+	border-top: 1px dashed var(--color-grey);
+	font-size: 16px;
 	line-height: 22px;
 	font-weight: 600;
-	margin-bottom: 21px;
-    border-bottom: 2px solid var(--color-grey);
+	margin-bottom: 11px;
 
 	@media (max-width: 576px) {
 		font-size: 17px;
@@ -33,14 +32,17 @@
     flex-direction: column;
 }
 
-.user{
-    padding-bottom: 20px;
+.date{
+	// font-weight: 500;
+	font-size: 16px;
+	color: var(--color-grey-dark)	
 }
 
 .content{
     display: flex;
     flex-direction: column;
     margin: 0;
+	
 	white-space: pre-line;
 	word-wrap: break-word;
 	font-size: 14px;
@@ -50,10 +52,6 @@
 		max-height: 100px;
 		overflow: hidden;
 	}
-}
-
-.positive, .negative{
-    padding: 10px;
 }
 
 .text{
