--- a/client/src/components/FilmsGrid/FilmsGrid.module.scss
+++ b/client/src/components/FilmsGrid/FilmsGrid.module.scss
@@ -1,12 +1,31 @@
-.content{
-    width: 100%;
-    height: 100%;
+.grid{
+	display: grid;
+	grid-template-columns: auto auto auto auto auto;
+    row-gap: 30px;
+    column-gap: 15px;
+
+    &:not(:last-child) {
+		margin-bottom: 50px;
+	}
+
+    @media (max-width: 1280px){
+        grid-template-columns: auto auto auto auto;
+        row-gap: 20px;
+    }
+
+	@media (max-width: 1096px) {
+		grid-template-columns: auto auto auto;
+	}
+
+	@media (max-width: 576px) {
+		row-gap: 25px;
+	}
 }
 
-.gridWrapper{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.card{
+    width: 180px;
+    height: 280px;
+    // &:not(:nth-last-col){
+    //     padding-right: 20px;
+    // }
 }
