--- a/client/src/components/Gallery/Gallery.module.scss
+++ b/client/src/components/Gallery/Gallery.module.scss
@@ -1,41 +1,12 @@
-.gallery{
-    position: relative;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.viewport{
-    margin-left: -12px;
-    margin-right: -12px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-top: -12px;
-    padding-top: 12px;
-}
-
-.galleryItem{
+.content{
     width: 100%;
-    padding: 10px;
-    display: inline-block;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    height: 100%;
 }
 
-.button{
-    position: absolute;
-    z-index: 1;
-    font-size: 46px;
-    top: 45%;
-    color:var(--color-black);
-    text-align: end;
-
-}
-
-.buttonPrev{
-    left: -30px;
-}
-
-.buttonNext{
-    right: -30px;
+.gallery{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
