--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -15,7 +15,9 @@
     --color-red: #f00;
     --color-red-light: rgb(255, 152, 152);
     --color-red-lightest: #FFEBEB;
+    --color-orange-light: #e67d65;
     --color-orange: #FF542E;
+    --color-green-dark: #00692a;
     --color-green: #00a340;
     --color-green-light: #0bff6d;
     --color-green-lightest: #EBF7EB;
