--- a/client/src/components/FilmsGrid/FilmsGrid.module.scss
+++ b/client/src/components/FilmsGrid/FilmsGrid.module.scss
@@ -8,17 +8,22 @@
 		margin-bottom: 50px;
 	}
 
-    @media (max-width: 1280px){
+    @media (max-width: 1420px){
         grid-template-columns: auto auto auto auto;
         row-gap: 20px;
     }
 
-	@media (max-width: 1096px) {
+	@media (max-width: 1150px) {
 		grid-template-columns: auto auto auto;
 	}
 
 	@media (max-width: 576px) {
+        grid-template-columns: auto auto;
 		row-gap: 25px;
+	}
+
+	@media (max-width: 374px) {
+        grid-template-columns: auto;
 	}
 }
 
