--- a/client/src/components/Pages/Film/components/Comments/Components/Item/Item.module.scss
+++ b/client/src/components/Pages/Film/components/Comments/Components/Item/Item.module.scss
@@ -1,4 +1,5 @@
 .item {
+	position: relative;
 	&:not(:last-child){
 		margin-bottom: 20px;
 	}
@@ -54,6 +55,8 @@
 	}
 }
 
-.text{
-    
+.delete{
+	position: absolute;
+	right: 10px;
+	bottom: -10px;
 }
