--- a/client/src/components/UI/ButtonDefault/ButtonDefault.module.scss
+++ b/client/src/components/UI/ButtonDefault/ButtonDefault.module.scss
@@ -72,3 +72,10 @@
         fill: currentColor;
     }
 }
+
+.delete{
+    background-color: var(--color-red);
+    &:hover{
+        background-color: var(--color-red-dark);
+    }
+}
