--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -12,6 +12,7 @@
     --color-grey: #cecece;
     --color-grey-light: #e0e0e0;
     --color-grey-lightest: #f5f5f5;
+    --color-red-dark: rgb(173, 0, 0);
     --color-red: #f00;
     --color-red-light: rgb(255, 152, 152);
     --color-red-lightest: #FFEBEB;
