--- a/client/src/components/FilmsGrid/FilmsGrid.module.scss
+++ b/client/src/components/FilmsGrid/FilmsGrid.module.scss
@@ -1,6 +1,8 @@
+$gridColumnWidth: 150px;
+
 .grid{
 	display: grid;
-	grid-template-columns: auto auto auto auto auto;
+	grid-template-columns: $gridColumnWidth $gridColumnWidth $gridColumnWidth $gridColumnWidth $gridColumnWidth;
     row-gap: 30px;
     column-gap: 15px;
 
@@ -8,29 +10,28 @@
 		margin-bottom: 50px;
 	}
 
-    @media (max-width: 1420px){
-        grid-template-columns: auto auto auto auto;
+    @media (max-width: 1192px){
+        grid-template-columns: $gridColumnWidth $gridColumnWidth $gridColumnWidth $gridColumnWidth;
         row-gap: 20px;
     }
 
-	@media (max-width: 1150px) {
-		grid-template-columns: auto auto auto;
-	}
-
-	@media (max-width: 576px) {
-        grid-template-columns: auto auto;
+	@media (max-width: 674px) {
+        grid-template-columns: $gridColumnWidth $gridColumnWidth $gridColumnWidth;
 		row-gap: 25px;
 	}
 
-	@media (max-width: 374px) {
-        grid-template-columns: auto;
+    @media (max-width: 500px) {
+        grid-template-columns: $gridColumnWidth $gridColumnWidth;
+	}
+
+    @media (max-width: 324px) {
+        grid-template-columns: $gridColumnWidth;
 	}
 }
 
 .card{
-    width: 180px;
-    height: 280px;
-    // &:not(:nth-last-col){
-    //     padding-right: 20px;
-    // }
+    max-width: 180px;
+    img{
+        height: 230px;
+    }
 }
