--- a/client/src/components/FiltersForm/FiltersForm.module.scss
+++ b/client/src/components/FiltersForm/FiltersForm.module.scss
@@ -9,7 +9,7 @@
 		margin-top: 15px;
 
 		@media (max-width: 1024px) {
-			margin-top: 0;
+			margin-top: 10px;
 			margin-left: var(--offset);
 		}
 	}
