--- a/client/src/components/Pages/Register/Register.module.scss
+++ b/client/src/components/Pages/Register/Register.module.scss
@@ -1,7 +1,7 @@
-.Register {
-    margin: 0 auto;
-    // background-color: var(--color-blue-light);
-    color: var(--color-black);
+.registerContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .authForm {
