--- a/client/src/components/Pages/Search/Search.module.scss
+++ b/client/src/components/Pages/Search/Search.module.scss
@@ -11,6 +11,16 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.filters{
+    margin-bottom: 20px;
+}
+
+.title{
+    align-self: flex-start;
+    margin-bottom: 20px;
 }
