--- a/client/src/components/UI/FilmCard/FilmCard.module.scss
+++ b/client/src/components/UI/FilmCard/FilmCard.module.scss
@@ -1,6 +1,8 @@
 .card{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     text-decoration: none;
     text-align: start;
     border: none;
@@ -58,7 +60,7 @@
 
 .img{
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     vertical-align: bottom;
 }
 
@@ -69,7 +71,7 @@
     margin-bottom: 0;
     padding: 0;
 
-    
+    text-align: center;
     white-space: nowrap; /* Текст не переносится */
     overflow: hidden; /* Обрезаем всё за пределами блока */
     text-overflow: ellipsis; /* Добавляем многоточие */
